--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,11 @@
 }
 
 .container {
-
   background-image: url("/Imagens/background.jpg");
-  background-repeat: no-repeat;
-  height: 80vh;
-  width: 100%;
+  height: 100%;
+  width: auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   gap: 50px;
 }
 
@@ -25,7 +23,7 @@
 
 a {
   text-decoration: none;
-  color: #fff9f9;
+
 }
 
 a:link {
@@ -39,7 +37,6 @@ a:hover {
 a:active {
   color: #fff9f9;
 }
-
 
 .box1 {
   height: 170px;
@@ -68,14 +65,14 @@ a:active {
 
 .container2 {
   display: flex;
-  justify-content: space-around;
+  justify-content:space-around;
   flex-direction: row;
-
+  
 }
 
 .text {
   color: #fff9f9;
-  
+
 }
 
 body {
@@ -86,18 +83,19 @@ body {
 
 h1 {
   text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
-
 h3{
   text-align: center;
-  margin-top: 50px;
-  margin-left: 200px;
-  margin-right: 200px;
 }
 
 h4 {
   text-align: center;
-  margin-top: 25px;
+}
+
+h5 {
+  text-align: center;
 }
 
 .logo {
@@ -106,10 +104,8 @@ h4 {
   gap: 50px;
   padding: 40px;
   color: rgb(255, 0, 0);
-  text-align: justify;
-  width: 700px ;
+  text-align: center;
 }
-
 
 .sspiral {
   height: 250px;
@@ -122,27 +118,27 @@ h4 {
 .rodapé {
   display: flex;
   justify-content: space-around;
-  margin: 80px;
+  margin: 20px;
 }
 
 .imgcabeçalho {
   width: 100%;
+  height: 100%;
 }
 
 .container1 {
   display: flex;
-  margin-top: 50px;
-  margin-left: 200px;
-  margin-right: 200px;
   flex-direction: row;
+  gap: 30px;
+  margin-top: 50px;
+  align-items: center;
 }
 
 .pessoa1 {
   display: flex;
   flex-direction: column;
-  margin-right: 100px;
-  margin-left: 100px;
-  align-self: center;
+  margin-right: 80px;
+  margin-left: 80px;
 }
 
 .fotos {
@@ -157,18 +153,103 @@ h4 {
   gap: 25px;
 }
 
-.box4 {
+.box4{
   display: flex;
   flex-direction: column;
   gap: 25px;
 }
 
-.container3 {
+.background{
+  background-color: rgb(255, 255, 255);
+  height: 100%;
+  width: 100%;
+}
 
-  background-image: url("/Imagens/Rectangle\ 13\ \(1\).png");
-  background-repeat: no-repeat;
-  height: 60vh;
+.container3{
+  display: flex;
+  justify-content: center;
+}
+
+footer{
+  margin-top: 50px;
+}
+
+
+/* acordião */
+.accordion {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.item {
+  overflow: hidden;
+  flex-direction: column;
+}
+
+.title {
+  background-color: #6B0808;
+  width: 700px;
+  height: 55px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  cursor: pointer;
+  color: #fff9f9;
+}
+
+.content {
+  max-height: 0;
+  overflow: hidden;
+  background: #fff9f9;
+  padding: 0 50px;
+  transition: max-height 0.4s ease, padding 0.3s ease;
+  border-radius: 15px;
+  margin-top: 10px;
+  text-align: center;
+
+}
+/* fim-acordião */
+
+
+.text-extasia{
+  color:#000000;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.container4{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.roupas{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 250px;
+  width: 300px;
+  margin: 100px;
+  gap: 25px;
+}
+
+.descriçao{
+  display: flex;
+  flex-direction: column;
+}
+
+.preço{
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  gap: 100px;
+}
+
+.background-eventos{
+ background-image: url("/Imagens/background-eventos.png");
+  height: auto;
   width: 100%;
   display: flex;
-  background-position: center;
 }
+
