--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ a:hover {
 }
 
 a:active {
-  color: #fff9f9;
+  color: #000000;
 }
 
 .box1 {
@@ -50,7 +50,19 @@ a:active {
 
 }
 
+.text2 {
+  a:link {
+    color: #000000;
+  }
 
+  a:hover {
+    color: #C70E0E;
+  }
+
+  a:active {
+    color: #000000;
+  }
+}
 
 .box2 {
   height: 170px;
@@ -65,9 +77,9 @@ a:active {
 
 .container2 {
   display: flex;
-  justify-content:space-around;
+  justify-content: space-around;
   flex-direction: row;
-  
+
 }
 
 .text {
@@ -86,7 +98,8 @@ h1 {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-h3{
+
+h3 {
   text-align: center;
 }
 
@@ -153,24 +166,24 @@ h5 {
   gap: 25px;
 }
 
-.box4{
+.box4 {
   display: flex;
   flex-direction: column;
   gap: 25px;
 }
 
-.background{
+.background {
   background-color: rgb(255, 255, 255);
   height: 100%;
   width: 100%;
 }
 
-.container3{
+.container3 {
   display: flex;
   justify-content: center;
 }
 
-footer{
+footer {
   margin-top: 50px;
 }
 
@@ -211,20 +224,22 @@ footer{
   text-align: center;
 
 }
+
 /* fim-acordião */
 
 
-.text-extasia{
-  color:#000000;
+.text-extasia {
+  color: #000000;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.container4{
+.container4 {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
-.roupas{
+
+.roupas {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -234,22 +249,21 @@ footer{
   gap: 25px;
 }
 
-.descriçao{
+.descriçao {
   display: flex;
   flex-direction: column;
 }
 
-.preço{
+.preço {
   display: flex;
   justify-content: center;
   margin-top: 10px;
   gap: 100px;
 }
 
-.background-eventos{
- background-image: url("/Imagens/background-eventos.png");
+.background-eventos {
+  background-image: url("/Imagens/background-eventos.png");
   height: auto;
   width: 100%;
   display: flex;
 }
-
